[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["James Coonce <coonce.james@codebrains.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.7"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
